--- a/paginas/login/login.html
+++ b/paginas/login/login.html
@@ -27,9 +27,9 @@
                 <label for="username" class="form-label">Usuario</label>
                 <div class="input-group">
                     <input type="text" class="form-control" id="username" name="username" placeholder="Ingresa tu usuario" required>
-                    <span class="input-group-text">
-                        <i class="fa-solid fa-user"></i> <!-- Ícono de usuario -->
-                    </span>
+                    <span class="input-group-text icon-container">
+                        <i class="fa-solid fa-user-large"></i>
+                    </span>                    
                 </div>
             </div>            
             <div class="mb-3">
