--- a/admin_paginas/about-admin/about-admin.html
+++ b/admin_paginas/about-admin/about-admin.html
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarContent">
                     <ul class="navbar-nav text-center">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../home_admin.html">
+                            <a class="nav-link" aria-current="page" href="../home_admin.html">
                                 <i class="fas fa-home me-2"></i>Inicio
                             </a>
                         </li>
@@ -34,7 +34,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../../admin_paginas/about-admin/about-admin.html">
+                            <a class="nav-link active" href="../../admin_paginas/about-admin/about-admin.html">
                                 <i class="fa-solid fa-address-card me-2"></i>Sobre Nosotros
                             </a>
                         </li>
@@ -48,8 +48,6 @@
                                 <i class="fa-solid fa-address-book me-2"></i>Contáctanos
                             </a>
                         </li>
-                    </ul>
-                </div>
     
                 <div class="d-flex align-items-center">
                     <a href="../../index.html" class="btn btn-warning btn-lg px-4 py-2 fw-bold text-dark shadow-sm me-3">
@@ -72,7 +70,7 @@
     </section>
 
     <!-- About Section -->
-    <section class="about-section">
+    <section class="about-section" style="text-align: justify;">
         <div class="container">
             <h2>Nuestra historia, misión y visión</h2>
             <div class="section-content">
@@ -208,7 +206,7 @@
     <section class="map-section">
         <div class="container">
             <h2>Ubicación</h2>
-            <p>En la Ciudad de Machala, Ayacucho entre 25 de Junio y Rocafuerte, Edificio Veintimilla Segundo Piso.</p>
+            <p>En la Ciudad de Machala, Ayacucho entre 25 de Junio y Rocafuerte, Edificio Veintemilla Segundo Piso.</p>
             <div class="map-container">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1184.2623739986!2d-79.96087038031185!3d-3.258500555885565!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x90330e59d7571303%3A0xad08c0e640483ae3!2sAyacucho%201619%2C%20Machala!5e0!3m2!1ses-419!2sec!4v1736816850739!5m2!1ses-419!2sec" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
