--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav text-center">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">
+                            <a class="nav-link active" href="index.html">
                                 <i class="fas fa-home me-2"></i>Inicio
                             </a>
                         </li>
@@ -58,7 +58,8 @@
                 </div>
             </div>
         </nav>
-    </header>    
+    </header>
+    
 
     <section class="hero">
         <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3000">
@@ -102,7 +103,7 @@
                     <div class="team-photo-wrapper">
                         <img src="static/img/abogado_1.jpg" alt="Abogado 1" class="team-photo">
                     </div>
-                    <h3>Dr. Carlos Ordeñaña Carrión</h3>
+                    <h3>Dr. Carlos Ordeñana Carrión</h3>
                     <p>Doctor en Jurisprudencia</p>
                 </div>
             </div>
@@ -111,7 +112,7 @@
                     <div class="team-photo-wrapper">
                         <img src="static/img/abogado_2.jpg" alt="Abogado 2" class="team-photo">
                     </div>
-                    <h3>Ab. Carla Veintimilla Zambrano</h3>
+                    <h3>Ab. Carla Veintemilla Zambrano</h3>
                     <p>Derecho Penal Económico</p>
                 </div>
             </div>
@@ -141,10 +142,10 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="teamModal1Label">Dr. Carlos Ordeñaña Carrión</h5>
+                    <h5 class="modal-title" id="teamModal1Label">Dr. Carlos Ordeñana Carrión</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body" style="text-align: justify;">
                     <img src="static/img/abogado_1modal.jpg" alt="Abogado 1" class="modal-photo">
                     <p>Doctor en Jurisprudencia y abogado de los tribunales de la justicia de la República por la Universidad de Cuenca, estudios de postgrado en Tributación en la Universidad de Cuenca y estudios de postgrado en Derecho Procesal en la Universidad San Antonio de Machala. 
                         Cuenta con más de 18 años de experiencia en Administración Pública como asesor, coordinador jurídico y depositario fiscal en el SRI y asesor jurídico en la Subscretaría de Minas Zona 7, y en la empresa privada como Gerente general de la Cooperativa de Producción y Comercialización La Clementina.</p>
@@ -160,10 +161,10 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="teamModal2Label">Ab. Carla Veintimilla Zambrano</h5>
+                    <h5 class="modal-title" id="teamModal2Label">Ab. Carla Veintemilla Zambrano</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body" style="text-align: justify;" >
                     <img src="static/img/abogada_2modal.jpg" alt="Abogado 2" class="modal-photo">
                     <p>Abogada de la Universidad Técnica Particular de Loja. Egresada de la Universidad Internacional de la Rioja de la maestría Derecho Penal Económico. 
                         Trabajó en la Administración Tributaria durante 13 años, desempeñando funciones de analista de cobranzas y de gestión tributaria en el SRI. 
@@ -183,7 +184,7 @@
                     <h5 class="modal-title" id="teamModal3Label">Econ. Daniel Gutierrez Jaramillo</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body" style="text-align: justify;" >
                     <img src="static/img/abogado_3modal.jpg" alt="Abogado 3" class="modal-photo">
                     <p>Economista por la Escuela Politécnica del Litoral, Contador público autorizado por la Universidad Técnica Particular de Loja, Magister en Administración de Empresas por la Universidad de Guayaquil. Doctor en Ciencias Contables y Empresariales por la Universidad nacional Mayor de San Marcos. 
                         Fue funcionario de la Administración Tributaria durante 11 años, desempeñando funciones de jefe de auditoría y jefe de reclamos en el SRI. 
@@ -203,7 +204,7 @@
                     <h5 class="modal-title" id="teamModal3Label">Ing. Maria Dolores Niemes</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body" style="text-align: justify;" >
                     <img src="static/img/abogado_4modal.jpg" alt="Abogado 4" class="modal-photo">
                     <p>Contadora e Ingeniera comercial en contabilidad por la Universidad Técnica de Machala. Diploma Superior en Tributación y Magister en Tributación y Finanzas por la Universidad de Guayaquil. Egresada del diplomado superior de Perito Contable Tributario por Universidad Metropolitana. 
                         Laboró 14 años en la Administración Tributaria, desempeñando funciones de especialista de auditoría, de reclamos, de gestión tributaria y contadora regional en el SRI El Oro. 
