--- a/paginas/contactanos/contactanos.html
+++ b/paginas/contactanos/contactanos.html
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav text-center">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../../index.html">
+                            <a class="nav-link" href="../../index.html">
                                 <i class="fas fa-home me-2"></i>Inicio
                             </a>
                         </li>
@@ -44,7 +44,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../../paginas/contactanos/contactanos.html">
+                            <a class="nav-link active" href="../../paginas/contactanos/contactanos.html">
                                 <i class="fa-solid fa-address-book me-2"></i>Contáctanos
                             </a>
                         </li>
