--- a/admin_paginas/blog-admin/blog-admin.html
+++ b/admin_paginas/blog-admin/blog-admin.html
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarContent">
                     <ul class="navbar-nav text-center">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../home_admin.html">
+                            <a class="nav-link" aria-current="page" href="../home_admin.html">
                                 <i class="fas fa-home me-2"></i>Inicio
                             </a>
                         </li>
@@ -39,7 +39,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../../admin_paginas/blog-admin/blog-admin.html">
+                            <a class="nav-link active" href="../../admin_paginas/blog-admin/blog-admin.html">
                                 <i class="fa-solid fa-blog me-2"></i>Blog Informativo
                             </a>
                         </li>
@@ -48,8 +48,6 @@
                                 <i class="fa-solid fa-address-book me-2"></i>Contáctanos
                             </a>
                         </li>
-                    </ul>
-                </div>
     
                 <div class="d-flex align-items-center">
                     <a href="../../index.html" class="btn btn-warning btn-lg px-4 py-2 fw-bold text-dark shadow-sm me-3">
