--- a/admin_paginas/services-admin/services-admin.html
+++ b/admin_paginas/services-admin/services-admin.html
@@ -24,12 +24,12 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarContent">
                     <ul class="navbar-nav text-center">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../home_admin.html">
+                            <a class="nav-link" aria-current="page" href="../home_admin.html">
                                 <i class="fas fa-home me-2"></i>Inicio
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../../admin_paginas/services-admin/services-admin.html">
+                            <a class="nav-link active" href="../../admin_paginas/services-admin/services-admin.html">
                                 <i class="fa-solid fa-screwdriver-wrench me-2"></i>Nuestros Servicios
                             </a>
                         </li>
@@ -47,9 +47,7 @@
                             <a class="nav-link" href="../contact-admin/contact-admin.html">
                                 <i class="fa-solid fa-address-book me-2"></i>Contáctanos
                             </a>
-                        </li>
-                    </ul>
-                </div>
+                        </li>                        
     
                 <div class="d-flex align-items-center">
                     <a href="../../index.html" class="btn btn-warning btn-lg px-4 py-2 fw-bold text-dark shadow-sm me-3">
@@ -296,6 +294,113 @@
                     <div class="mb-3">
                         <label for="fiscalDescription3" class="form-label">Descripción de la Necesidad Fiscal</label>
                         <textarea class="form-control" id="fiscalDescription3" rows="3" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Enviar Requisitos</button>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="serviceModal4" tabindex="-1" aria-labelledby="serviceModal4Label" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="serviceModal4Label">Consultoría Legal Empresarial</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <img src="../../static/img/asistencia_juridica.webp" alt="Planeación jurídica">
+                <p>Para comenzar el proceso de consultoría legal empresarial, por favor, llena los siguientes campos:</p>
+                <form id="formService4">
+                    <div class="mb-3">
+                        <label for="name4" class="form-label">Nombre Completo</label>
+                        <input type="text" class="form-control" id="name4" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="email4" class="form-label">Correo Electrónico</label>
+                        <input type="email" class="form-control" id="email4" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="company4" class="form-label">Nombre de la Empresa</label>
+                        <input type="text" class="form-control" id="company4" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="legalDescription4" class="form-label">Descripción del Caso</label>
+                        <textarea class="form-control" id="legalDescription4" rows="3" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Enviar Requisitos</button>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="serviceModal5" tabindex="-1" aria-labelledby="serviceModal5Label" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="serviceModal5Label">Acompañamiento en Procesos de Determinación de Tributos</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <img src="../../static/img/acompañamiento_abogado.webp" alt="Acompañamiento en procesos">
+                <p>Para solicitar nuestro acompañamiento en procesos de determinación de tributos, por favor, completa el siguiente formulario:</p>
+                <form id="formService5">
+                    <div class="mb-3">
+                        <label for="name5" class="form-label">Nombre Completo</label>
+                        <input type="text" class="form-control" id="name5" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="email5" class="form-label">Correo Electrónico</label>
+                        <input type="email" class="form-control" id="email5" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="company5" class="form-label">Nombre de la Empresa</label>
+                        <input type="text" class="form-control" id="company5" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="processDescription5" class="form-label">Descripción del Proceso</label>
+                        <textarea class="form-control" id="processDescription5" rows="3" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Enviar Requisitos</button>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="serviceModal6" tabindex="-1" aria-labelledby="serviceModal6Label" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="serviceModal6Label">Defensa en Casos Penales Económicos</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <img src="../../static/img/defensa_casos.jpg" alt="Defensa casos">
+                <p>Para solicitar nuestra defensa en casos penales económicos, por favor, llena el siguiente formulario:</p>
+                <form id="formService6">
+                    <div class="mb-3">
+                        <label for="name6" class="form-label">Nombre Completo</label>
+                        <input type="text" class="form-control" id="name6" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="email6" class="form-label">Correo Electrónico</label>
+                        <input type="email" class="form-control" id="email6" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="caseDescription6" class="form-label">Descripción del Caso</label>
+                        <textarea class="form-control" id="caseDescription6" rows="3" required></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary">Enviar Requisitos</button>
                 </form>
