--- a/paginas/blog_informativo/blog_informativo.html
+++ b/paginas/blog_informativo/blog_informativo.html
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav text-center">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../../index.html">
+                            <a class="nav-link" href="../../index.html">
                                 <i class="fas fa-home me-2"></i>Inicio
                             </a>
                         </li>
@@ -39,7 +39,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../../paginas/blog_informativo/blog_informativo.html">
+                            <a class="nav-link active" href="../../paginas/blog_informativo/blog_informativo.html">
                                 <i class="fa-solid fa-blog me-2"></i>Blog Informativo
                             </a>
                         </li>
