--- a/paginas/nuestros_servicios/nuestros_servicios.html
+++ b/paginas/nuestros_servicios/nuestros_servicios.html
@@ -24,12 +24,12 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav text-center">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../../index.html">
+                            <a class="nav-link" href="../../index.html">
                                 <i class="fas fa-home me-2"></i>Inicio
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../../paginas/nuestros_servicios/nuestros_servicios.html">
+                            <a class="nav-link active" href="../../paginas/nuestros_servicios/nuestros_servicios.html">
                                 <i class="fa-solid fa-screwdriver-wrench me-2"></i>Nuestros Servicios
                             </a>
                         </li>
