--- a/paginas/sobre_nosotros/sobre_nosotros.html
+++ b/paginas/sobre_nosotros/sobre_nosotros.html
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav text-center">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../../index.html">
+                            <a class="nav-link" href="../../index.html">
                                 <i class="fas fa-home me-2"></i>Inicio
                             </a>
                         </li>
@@ -34,7 +34,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../../paginas/sobre_nosotros/sobre_nosotros.html">
+                            <a class="nav-link active" href="../../paginas/sobre_nosotros/sobre_nosotros.html">
                                 <i class="fa-solid fa-address-card me-2"></i>Sobre Nosotros
                             </a>
                         </li>
@@ -72,12 +72,11 @@
     <section class="about-section">
         <div class="container">
             <h2>Nuestra historia, misión y visión</h2>
-            <div class="section-content">
+            <div class="section-content" style="text-align: justify;" >
                 <!-- History Section -->
                 <div>
                     <h3>Historia</h3>
-                    <p>ASESORO nació con la finalidad de apoyar al cumplimiento legal de las empresas.
-                        Brindamos asesoría a nuestros clientes, previo a la implementación del negocio y durante la gestión, permitiendo así, que su atención se centre en la producción y generación de recursos para su empresa. Nuestros socios mantienen una destacada trayectoria a nivel de asesoría tributaria empresarial.</p>
+                    <p>ASESORO nació con la finalidad de apoyar al cumplimiento legal de las empresas. Brindamos asesoría a nuestros clientes, previo a la implementación del negocio y durante la gestión, permitiendo así, que su atención se centre en la producción y generación de recursos para su empresa. Nuestros socios mantienen una destacada trayectoria a nivel de asesoría tributaria empresarial.</p>
                     <img src="../../static/img/logo asesoro mediano.webp" alt="Historia" class="img-fluid mt-3">
                 </div>
                 <!-- Mission Section -->
@@ -119,7 +118,7 @@
     <section class="map-section">
         <div class="container">
             <h2>Ubicación</h2>
-                <p>En la Ciudad de Machala, Ayacucho entre 25 de Junio y Rocafuerte, Edificio Veintimilla Segundo Piso.</p>
+                <p>En la Ciudad de Machala, Ayacucho entre 25 de Junio y Rocafuerte, Edificio Veintemilla Segundo Piso.</p>
             <div class="map-container">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1184.2623739986!2d-79.96087038031185!3d-3.258500555885565!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x90330e59d7571303%3A0xad08c0e640483ae3!2sAyacucho%201619%2C%20Machala!5e0!3m2!1ses-419!2sec!4v1736816850739!5m2!1ses-419!2sec" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
