--- a/admin_paginas/home_admin.html
+++ b/admin_paginas/home_admin.html
@@ -29,17 +29,17 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../../admin_paginas/services-admin/services-admin.html">
+                            <a class="nav-link" href="../admin_paginas/services-admin/services-admin.html">
                                 <i class="fa-solid fa-screwdriver-wrench me-2"></i>Nuestros Servicios
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../../admin_paginas/about-admin/about-admin.html">
+                            <a class="nav-link" href="../admin_paginas/about-admin/about-admin.html">
                                 <i class="fa-solid fa-address-card me-2"></i>Sobre Nosotros
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../../admin_paginas/blog-admin/blog-admin.html">
+                            <a class="nav-link" href="../admin_paginas/blog-admin/blog-admin.html">
                                 <i class="fa-solid fa-blog me-2"></i>Blog Informativo
                             </a>
                         </li>
