--- a/paginas/contactanos/contactanos.html
+++ b/paginas/contactanos/contactanos.html
@@ -52,10 +52,10 @@
                 </div>
     
                 <div class="d-flex ms-lg-auto">
-                    <a href="../../paginas/login/login.html" class="btn btn-warning btn-lg px-4 py-2 fw-bold text-dark shadow-sm">
+                    <a href="../../paginas/login/login.php" class="btn btn-warning btn-lg px-4 py-2 fw-bold text-dark shadow-sm">
                         <i class="fa-solid fa-sign-in-alt me-2"></i>Acceder
                     </a>
-                </div>
+                </div>  
             </div>
         </nav>
     </header>
